--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -1,48 +1,31 @@
 {
   "name": "uvsitcu",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "dependencies": {
-    "bootstrap": "^4.5.2",
-    "jquery": "^3.5.1",
-    "js-logger": "^1.6.0",
-    "merge": "^1.2.1",
-    "moment": "^2.27.0",
-    "oidc-client": "^1.9.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-particles-js": "^3.3.0",
-    "react-redux": "^7.2.1",
-    "react-router-bootstrap": "^0.25.0",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.3",
-    "reactstrap": "^8.5.1",
-    "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0",
-    "rimraf": "^2.6.2"
+    "bootstrap": "4.5.2",
+    "merge": "1.2.1",
+    "moment": "2.27.0",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-particles-js": "3.3.0",
+    "react-redux": "7.2.1",
+    "react-router-dom": "5.2.0",
+    "react-scripts": "4.0.3",
+    "reactstrap": "8.5.1",
+    "rimraf": "2.6.2"
   },
   "devDependencies": {
-    "ajv": "^6.12.4",
-    "cross-env": "^5.2.0",
-    "eslint": "^6.8.0",
-    "eslint-config-react-app": "^5.2.1",
-    "eslint-plugin-flowtype": "^4.7.0",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-react": "^7.20.6",
-    "redux-devtools-extension": "^2.13.8",
-    "typescript": "^3.9.7"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
+    "ajv": "6.12.4",
+    "cross-env": "5.2.0",
+    "node-sass": "6.0.0",
+    "typescript": "4.3.2"
   },
   "scripts": {
     "start": "rimraf ./build && react-scripts start",
     "build": "react-scripts build",
     "test": "cross-env CI=true react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "lint": "eslint ./src/",
-    "clean": "taskkill /IM node.exe /F"
+    "eject": "react-scripts eject"
   },
   "browserslist": {
     "production": [
